# opencv-sample

./: .gitignore  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: native-lib.cpp
app/src/main/java/eu/sisik/opencvsample/: MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
